# libcsics

./: .gitignore  CMakeLists.txt  LICENSE
cmake/: deps.cmake  uhd.cmake
include/csics/: Buffer.hpp  csics.hpp
include/csics/io/: Buffer.hpp  io.hpp
include/csics/io/compression/: Compressor.hpp  compression.hpp
include/csics/io/encdec/: Base64.hpp  encdec.hpp
include/csics/io/net/: MQTTEndpoint.hpp  NetTypes.hpp  TCPEndpoint.hpp  UDPEndpoint.hpp  net.hpp
include/csics/io/net/message/: MQTTEndpoint.hpp  MessageFuncs.hpp  message.hpp
include/csics/io/net/stream/: Stream.hpp  StreamFuncs.hpp  TCPEndpoint.hpp
include/csics/linalg/: Complex.hpp  Concepts.hpp  Coordinates.hpp  Matrix.hpp  Ops.hpp  Vec.hpp  linalg.hpp
include/csics/queue/: SPSCMessageQueue.hpp  SPSCQueue.hpp  queue.hpp
include/csics/radio/: Radio.hpp  RadioRx.hpp  radio.hpp
include/csics/radio/usrp/: USRPRadioRx.hpp
include/csics/serialization/: JSONSerializer.hpp  Serialization.hpp  serialization.hpp
include/queue/: SPSCQueue.hpp
include/radio/: RadioRx.hpp
src/: CMakeLists.txt  _dev_anchor.cpp
src/io/: CMakeLists.txt  Compressor.cpp  ZLIBCompressor.cpp  ZLIBCompressor.hpp  ZSTDCompressor.cpp  ZSTDCompressor.hpp
src/io/encdec/: Base64Encoder.cpp
src/io/net/: CMakeLists.txt  MQTTEndpoint.cpp
src/io/net/stream/platform/unix/: TCPEndpointUnix.cpp
src/queue/: SPSCQueue.cpp
src/radio/: CMakeLists.txt  RadioRx.cpp
src/radio/usrp/: USRPConfigs.hpp  USRPRadioRx.cpp  USRPRadioRx.hpp
src/serialization/: CMakeLists.txt  JSONSerializer.cpp
test/: CMakeLists.txt  test_utils.cpp  test_utils.hpp
test/io/: base64_encoding_test.cpp  compression_utils.cpp  compression_utils.hpp  zlib_compression_test.cpp  zstd_compression_test.cpp
test/linalg/: matrix_test.cpp  vec_lib_test.cpp
test/queue/: spsc_queue_test.cpp
test/radio/: uhd_test.cpp
test/serialization/: json_serialization_test.cpp
